<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Lab_1_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="app_label">Lab 1 Android 95408</string>
    <string name="name">Imię:</string>
    <string name="surname">Nazwisko:</string>
    <string name="marks">Liczba ocen:</string>
    <string name="name_hint">Wpisz imię</string>
    <string name="surname_hint">Wpisz nazwisko</string>
    <string name="marks_hint">Wpisz liczbę ocen (5–15)</string>
    <string name="button">Oceny</string>
</resources>